2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2013-01-09  Andreas Kupries  <andreask@activestate.com>

	* mime.tcl (::mime::buildmessage): [Bug 3565267]: Handle
	* mime.man: possibility of 'errorCode' not set. Version
	* pkgIndex.tcl: bumped to 1.5.6.

2012-08-02  Andreas Kupries  <andreask@activestate.com>

	* mime.man: [Bug 3354014]: Fixed typo in option name. -parts is
	  correct. (Note the trailing 's').

2012-02-23  Andreas Kupries  <andreask@activestate.com>

	* mime.test: [Bug 3483716]: Added testcase, supplied by Christian
	  Nassau. Thank you.

2012-02-22  Andreas Kupries  <andreask@activestate.com>

	* mime.tcl: [Bug 3483716]: Accepted patch by Christian Nassau
	* pkgIndex.tcl: <cnassau@users.sourceforge.net> to handle (decode)
	  the content transfer encodings base64 and quoted-printable. Bumped
	  version to 1.5.5.

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2011-01-20  Andreas Kupries <andreask@activestate.com>

	* smtp.man: [ActiveState 89180]: Added documentation about the
	  soft-dependencies required for SMTP authentication, i.e. SASL.

2010-07-06  Andreas Kupries  <andreask@activestate.com>

	* smtp.man: [Bug 3011581]: Accepted tweak to the documentation of
	  the -header option proposed by <rich123@users.sf.net> to make
	  the syntax clearer.

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*